[COMMON] feature: CIST 클립 선분석과 최종 분석 캐시 재사용 (#291)
* feature(common): CIST 클립 특징 선분석과 캐시 재사용

* feature(be): CIST 답변 저장 후 클립 선분석 요청

* docs(common): CIST 클립 선분석 계약과 체크리스트 반영
